a possible fix for wrong positioning of skip to main bottons

--- a/public/main.css
+++ b/public/main.css
@@ -298,6 +298,8 @@ body {
 .title-wrapper {
   position: relative;
   height: 100vh;
+  min-height: -webkit-fill-available;
+  min-height: 100vh;
   width: 100vw;
   display: grid;
   -webkit-background-size: cover;
